--- a/index.html
+++ b/index.html
@@ -1,136 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Peaceful Vinland Vibes</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wuthering Waves Portfolio</title>
   <style>
+    /* Global Reset */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
 
+    /* Background with ocean waves imagery (you can replace the URL with your own GIF/image) */
     body {
       font-family: 'Georgia', serif;
-      background: url('https://images.unsplash.com/photo-1600788744115-8b024d229948?auto=format&fit=crop&w=1470&q=80') no-repeat center center fixed;
+      background: url('your-ocean-gif-or-image-url.gif') no-repeat center center fixed;
       background-size: cover;
-      color: #f9f9f9;
-      height: 100vh;
-      overflow: hidden;
-      position: relative;
+      color: #f0f0f0; /* Light text for contrast */
+      line-height: 1.6;
     }
 
-    #loading-screen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      transition: opacity 0.5s ease;
-    }
-
-    #loading-screen img {
-      width: 100px;
-      height: 100px;
-    }
-
-    .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.4);
-      padding: 2rem 3rem;
-      border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+    /* Header Styling */
+    header {
+      padding: 60px 20px;
       text-align: center;
-      z-index: 1;
+      background-color: rgba(0, 0, 0, 0.6);  /* Dark overlay */
     }
 
-    .content h1 {
+    header h1 {
       font-size: 3rem;
-      margin-bottom: 1rem;
+      color: #e1e1e1;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     }
 
-    .content p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
+    header h2 {
+      font-size: 1.5rem;
+      color: #aaa;
+      margin-top: 10px;
     }
 
-    .content button {
-      background-color: #e6e6e6;
-      color: #111;
-      border: none;
-      padding: 0.7rem 1.5rem;
-      font-size: 1rem;
+    /* Main Section */
+    section {
+      margin: 40px auto;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.7);  /* Darker overlay for readability */
+      border: 2px solid #444;
       border-radius: 10px;
-      cursor: pointer;
-      transition: all 0.3s ease;
+      max-width: 1000px;
     }
 
-    .content button:hover {
-      background-color: #cfcfcf;
+    /* Paragraph and Border Style */
+    p {
+      margin-bottom: 20px;
+      padding: 15px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border: 2px solid #777;
+      border-radius: 10px;
+      box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.1);
     }
 
-    .doge-runner {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 80px;
-      height: 80px;
-      z-index: 1000;
+    /* Navigation Links */
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    nav a {
+      color: #e1e1e1;
+      text-decoration: none;
+      padding: 10px 20px;
+      background-color: #444;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      background-color: #555;
+    }
+
+    /* Footer Styling */
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      background-color: rgba(0, 0, 0, 0.7);
+      border-top: 2px solid #444;
     }
   </style>
 </head>
 <body>
-  <!-- Loading Screen -->
-  <div id="loading-screen">
-    <img src="https://media.giphy.com/media/SzZmgnJJ34Mcfacu7z/giphy.gif" alt="Loading..." />
-  </div>
+  <!-- Header Section -->
+  <header>
+    <h1>Welcome to My Portfolio</h1>
+    <h2>Wuthering Waves Theme</h2>
+  </header>
 
-  <!-- Main Content -->
-  <div class="content">
-    <h1>This... is a peaceful place.</h1>
-    <p>Take a breath. Nothing happens here. Just rest.</p>
-    <button onclick="toggleMusic()">Toggle Music</button>
-  </div>
+  <!-- Main Content Section (This will be rendered from README.md) -->
+  <section>
+    <!-- Dynamic content from README.md will be rendered here automatically by GitHub Pages -->
+  </section>
 
-  <!-- Running Doge GIF -->
-  <img src="https://media.giphy.com/media/SzZmgnJJ34Mcfacu7z/giphy.gif" alt="Running Pixel Doge" class="doge-runner" />
-
-  <!-- Background Music -->
-  <audio id="bgm" loop>
-    <source src="assets/audio/duvet.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-  </audio>
-
-  <script>
-    const bgm = document.getElementById('bgm');
-    let playing = false;
-
-    function toggleMusic() {
-      if (playing) {
-        bgm.pause();
-      } else {
-        bgm.play();
-      }
-      playing = !playing;
-    }
-
-    // Loading screen fade out
-    window.addEventListener('load', () => {
-      const loadingScreen = document.getElementById('loading-screen');
-      loadingScreen.style.opacity = '0';
-      setTimeout(() => {
-        loadingScreen.style.display = 'none';
-      }, 500);
-    });
-  </script>
+  <!-- Footer Section -->
+  <footer>
+    <p>Created with passion, powered by HTML & CSS</p>
+  </footer>
 </body>
 </html>
